--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                             <img src="https://cdn.prod.website-files.com/66b6d7fd4d3e9cef94717176/670ee20efb2f13eeab008b87_Social_X.svg" alt="X Page">
                         </a>
                         <a href="https://www.instagram.com/hackerrank/" target=" _blank">
-                            <img src="../website/image/Insta.svg" alt="Insta Page">
+                            <img src="image/Insta.svg" alt="Insta Page">
                         </a>
                     </div>
 
@@ -475,4 +475,5 @@
         </div>
     </footer>
 </body>
+
 </html>
