--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="navbar">
             <div class="icon">
                 <a href="#">
-                    <img src="../website/image/logo.svg" />
+                    <img src="image/logo.svg" />
                 </a>
             </div>
             <nav class="menu">
@@ -208,18 +208,18 @@
             </div>
 
             <div class="companies">
-                <img src="../website/image/airbnb.svg" alt="Airbnb">
-                <img src="../website/image/stripe.svg" alt="Stripe">
-                <img src="../website/image/Linkedin.svg" alt="LinkedIn">
-                <img src="../website/image/atlassian.svg" alt="Atlassian">
-                <img src="../website/image/ibm.svg" alt="IBM">
-                <img src="../website/image/snapinc.svg" alt="Snap">
+                <img src="image/airbnb.svg" alt="Airbnb">
+                <img src="image/stripe.svg" alt="Stripe">
+                <img src="image/Linkedin.svg" alt="LinkedIn">
+                <img src="image/atlassian.svg" alt="Atlassian">
+                <img src="image/ibm.svg" alt="IBM">
+                <img src="image/snapinc.svg" alt="Snap">
     
-                <img src="../website/image/doordash.svg" alt="DoorDash">
-                <img src="../website/image/adobe.svg" alt="Adobe">
-                <img src="../website/image/paypal.svg" alt="PayPal">
-                <img src="../website/image/goldman.svg" alt="Goldman">
-                <img src="../website/image/canva.svg" alt="Canva">    
+                <img src="image/doordash.svg" alt="DoorDash">
+                <img src="image/adobe.svg" alt="Adobe">
+                <img src="image/paypal.svg" alt="PayPal">
+                <img src="image/goldman.svg" alt="Goldman">
+                <img src="image/canva.svg" alt="Canva">    
             </div>
         </section>
 
@@ -443,7 +443,7 @@
                 <div class="left">
                     <div class="logo">
                         <a href="#">
-                            <img src="../website/image/favicon.ico" alt="H"> 
+                            <img src="image/favicon.ico" alt="H"> 
                         </a>
                     </div>
                     <p>© HackerRank 2026 All Rights Reserved.</p>
