Update Video Paths

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HackerRank - Online Coding Tests and Technical Interviews</title>
-    <link rel="icon" type="image/png" href="../website/image/favicon-32x32.png">
+    <link rel="icon" type="image/png" href="image/favicon-32x32.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -270,14 +270,14 @@
                     </div>
                 </div>
                 <video class="video" autoplay loop muted playsinline>
-                    <source src="../website/video/HackerRank Community Video-1.mp4" type="video/mp4">
+                    <source src="video/HackerRank Community Video-1.mp4" type="video/mp4">
                 </video>
             </div>
 
             <div class="division2" class="responsive-box">
     
                 <video class="vide" autoplay loop muted playsinline>
-                    <source src="../website/video/video2.mp4" type="video/mp4">
+                    <source src="video/video2.mp4" type="video/mp4">
                 </video>
                 <div class="contain">
                     <div class="btn">
@@ -328,13 +328,13 @@
                     </div>
 
                     <video class="vid" autoplay loop muted playsinline>
-                        <Source src="../website/video/video3.mp4" type="video/mp4">
+                        <Source src="video/video3.mp4" type="video/mp4">
                     </video>
             </div>
 
             <div class="division4">
                 <video class="vi" autoplay loop muted playsinline>
-                    <Source src="../website/video/video4.mp4" type="video/mp4">
+                    <Source src="video/video4.mp4" type="video/mp4">
                 </video>
 
                 <div class="ft">
@@ -381,7 +381,7 @@
             </div>
 
             <video class="vid" autoplay loop muted playsinline>
-                <Source src="../website/video/video5.mp4" type="video/mp4">
+                <Source src="video/video5.mp4" type="video/mp4">
             </video>
         </div>
 
